<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
    <TextView 
        android:id="@+id/pwd_prompt"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/content_size"
        android:textColor="@color/black"
        android:text="@string/set_pwd_compose"
        />
    <LinearLayout
        style="@style/corner_margin_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/atte_corners"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/current_layout"
            style="@style/item_text_padding"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/current_pwd_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.5"
                android:text="@string/rigester_login_pwd"
                android:textSize="@dimen/content_size" />

            <EditText
                android:id="@+id/current_pwd_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/text_color_white"
                android:hint="@string/input_login_pwd"
                android:inputType="textPassword" />
        </LinearLayout>
		
        <include 
            android:id="@+id/my_line"
            layout="@layout/line_layout"
            />
        
        <LinearLayout
            style="@style/item_text_padding"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/new_pwd_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.5"
                android:text="@string/confirm_again"
                android:textSize="@dimen/content_size" />

            <EditText
                android:id="@+id/new_pwd_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/text_color_white"
                android:hint="@string/input_login_pwd_again"
                android:inputType="textPassword" />
        </LinearLayout>
		
        
    </LinearLayout>
	<TextView 
	    android:layout_marginBottom="@dimen/margin_bottom"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/content_size"
        android:textColor="@color/black"
        android:text="@string/rigester_pwd_compose"
        />
    <Button
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:id="@+id/modify_btn"
        style="@style/btn_single_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wihte_btn_action"
        android:text="@string/btn_confirm"
        android:textColor="@color/black"
        android:textSize="@dimen/content_size" />

</LinearLayout>