<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
    <TextView 
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/little_size"
        android:textColor="@color/black"
        android:text="@string/active_swip"
        />
    <LinearLayout
        style="@style/corner_margin_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/atte_corners"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/item_text_padding"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:text="@string/active_swip_prompt"
                android:textSize="@dimen/content_size" />

            <EditText
                android:id="@+id/recieve_sms_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/text_color_white"
                android:hint="@string/active_swip_please"
                android:inputType="text" />
             <TextView
                 android:id="@+id/phone_text"
                 android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/rigester_phone"
                android:textSize="@dimen/content_size" />
        </LinearLayout>
		
       
    </LinearLayout>
	
     <LinearLayout
        android:layout_width="fill_parent"
         android:background="@drawable/atte_corners"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:orientation="vertical" >
         
    </LinearLayout>
    <Button
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:id="@+id/active_btn"
        style="@style/btn_single_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/wihte_btn_action"
        android:text="@string/active_swip_btn"
        android:textColor="@color/black"
        android:textSize="@dimen/content_size" />

</LinearLayout>